Update lists at 20240902-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -16,6 +16,7 @@ allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
+allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -165,6 +166,7 @@ allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 161.35.129.51;
@@ -205,6 +207,7 @@ allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
+allow 173.249.57.253;
 allow 176.114.248.225;
 allow 176.118.193.33;
 allow 176.121.81.51;
@@ -675,7 +678,6 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -697,6 +699,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -957,7 +960,6 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1051,6 +1053,7 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:a140:2186:5418::1;
+allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::163a;
@@ -1078,6 +1081,7 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f9:4b:48a9::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:c5cd::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1093,6 +1097,7 @@ allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2095:2624::1;
+allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:3b40:fe:3b1::1;
@@ -1437,7 +1442,6 @@ allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.153.254.204;
 allow 37.114.41.119;
 allow 37.120.190.85;
 allow 37.120.239.59;
@@ -1562,7 +1566,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1593,6 +1596,7 @@ allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
+allow 5.42.87.198;
 allow 54.36.101.21;
 allow 54.36.209.253;
 allow 54.36.209.254;
@@ -1600,6 +1604,7 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.79.66.19;
+allow 62.171.137.169;
 allow 62.182.83.214;
 allow 62.182.84.146;
 allow 64.227.115.78;
@@ -1648,6 +1653,7 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
@@ -1751,3 +1757,4 @@ allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 98.128.173.33;
+allow 98.82.73.78;
