--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -170,6 +170,7 @@ allow 156.67.111.146;
 allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -206,7 +207,6 @@ allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.249.57.253;
-allow 176.114.248.225;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -528,7 +528,6 @@ allow 185.246.189.99;
 allow 185.246.86.197;
 allow 185.247.184.105;
 allow 185.247.184.33;
-allow 185.247.224.143;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
@@ -676,7 +675,6 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -908,6 +906,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
+allow 23.20.132.42;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -950,6 +949,7 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
@@ -957,7 +957,6 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1185,7 +1184,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:193::100;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
@@ -1196,7 +1194,6 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
-allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
@@ -1392,6 +1389,8 @@ allow 2a0e:97c0:3ea:fd::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
+allow 2a0f:5707:aaef:282::1;
+allow 2a0f:5707:aaef:390::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:b852::1;
@@ -1454,7 +1453,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.223.230.104;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1502,6 +1500,8 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.151.122.34;
 allow 45.15.157.177;
+allow 45.155.76.108;
+allow 45.155.76.226;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1543,7 +1543,6 @@ allow 47.250.38.29;
 allow 47.76.187.86;
 allow 5.104.86.6;
 allow 51.15.59.15;
-allow 51.178.45.216;
 allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
@@ -1565,6 +1564,7 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1643,6 +1643,7 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
+allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.62;
