--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
+allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -101,7 +102,6 @@ allow 108.181.69.243;
 allow 108.61.158.147;
 allow 108.61.189.136;
 allow 109.169.33.163;
-allow 109.248.147.137;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -147,7 +147,6 @@ allow 144.24.197.112;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.121.124;
-allow 146.70.164.210;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.49.17;
@@ -170,7 +169,6 @@ allow 156.67.111.146;
 allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -294,6 +292,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -528,6 +527,7 @@ allow 185.246.189.99;
 allow 185.246.86.197;
 allow 185.247.184.105;
 allow 185.247.184.33;
+allow 185.247.224.143;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
@@ -862,6 +862,19 @@ allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.197.107.138;
 allow 217.79.189.239;
+allow 23.129.64.138;
+allow 23.129.64.147;
+allow 23.129.64.148;
+allow 23.129.64.150;
+allow 23.129.64.212;
+allow 23.129.64.214;
+allow 23.129.64.216;
+allow 23.129.64.222;
+allow 23.129.64.223;
+allow 23.129.64.227;
+allow 23.129.64.228;
+allow 23.129.64.229;
+allow 23.129.64.230;
 allow 23.130.136.194;
 allow 23.130.136.195;
 allow 23.137.248.100;
@@ -905,8 +918,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
-allow 23.20.132.42;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -937,7 +948,6 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
@@ -949,7 +959,6 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
@@ -1062,6 +1071,19 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
+allow 2620:18c:0:192::138;
+allow 2620:18c:0:192::147;
+allow 2620:18c:0:192::148;
+allow 2620:18c:0:192::150;
+allow 2620:18c:0:192::212;
+allow 2620:18c:0:192::214;
+allow 2620:18c:0:192::216;
+allow 2620:18c:0:192::222;
+allow 2620:18c:0:192::223;
+allow 2620:18c:0:192::227;
+allow 2620:18c:0:192::228;
+allow 2620:18c:0:192::229;
+allow 2620:18c:0:192::230;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
@@ -1184,6 +1206,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:193::100;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
@@ -1541,6 +1564,7 @@ allow 46.38.255.27;
 allow 47.243.99.161;
 allow 47.250.38.29;
 allow 47.76.187.86;
+allow 50.17.16.156;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
@@ -1748,7 +1772,6 @@ allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
-allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
