--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -133,7 +133,6 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
@@ -145,7 +144,6 @@ deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
@@ -258,6 +256,19 @@ deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
+deny 2620:18c:0:192::138;
+deny 2620:18c:0:192::147;
+deny 2620:18c:0:192::148;
+deny 2620:18c:0:192::150;
+deny 2620:18c:0:192::212;
+deny 2620:18c:0:192::214;
+deny 2620:18c:0:192::216;
+deny 2620:18c:0:192::222;
+deny 2620:18c:0:192::223;
+deny 2620:18c:0:192::227;
+deny 2620:18c:0:192::228;
+deny 2620:18c:0:192::229;
+deny 2620:18c:0:192::230;
 deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:11c0:1b:aa2::5;
@@ -379,6 +390,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:193::100;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
