--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -169,6 +169,7 @@ allow 156.67.111.146;
 allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -205,6 +206,7 @@ allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.249.57.253;
+allow 176.114.248.225;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -675,6 +677,7 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
+allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -862,13 +865,31 @@ allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.197.107.138;
 allow 217.79.189.239;
+allow 23.129.64.131;
+allow 23.129.64.132;
+allow 23.129.64.133;
+allow 23.129.64.134;
+allow 23.129.64.135;
+allow 23.129.64.136;
+allow 23.129.64.137;
 allow 23.129.64.138;
+allow 23.129.64.139;
+allow 23.129.64.140;
+allow 23.129.64.141;
+allow 23.129.64.142;
+allow 23.129.64.143;
+allow 23.129.64.144;
+allow 23.129.64.145;
+allow 23.129.64.146;
 allow 23.129.64.147;
 allow 23.129.64.148;
+allow 23.129.64.149;
 allow 23.129.64.150;
 allow 23.129.64.212;
 allow 23.129.64.214;
 allow 23.129.64.216;
+allow 23.129.64.218;
+allow 23.129.64.221;
 allow 23.129.64.222;
 allow 23.129.64.223;
 allow 23.129.64.227;
@@ -959,6 +980,7 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
@@ -966,6 +988,7 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1071,13 +1094,31 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
+allow 2620:18c:0:192::131;
+allow 2620:18c:0:192::132;
+allow 2620:18c:0:192::133;
+allow 2620:18c:0:192::134;
+allow 2620:18c:0:192::135;
+allow 2620:18c:0:192::136;
+allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
+allow 2620:18c:0:192::139;
+allow 2620:18c:0:192::140;
+allow 2620:18c:0:192::141;
+allow 2620:18c:0:192::142;
+allow 2620:18c:0:192::143;
+allow 2620:18c:0:192::144;
+allow 2620:18c:0:192::145;
+allow 2620:18c:0:192::146;
 allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
+allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::150;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::216;
+allow 2620:18c:0:192::218;
+allow 2620:18c:0:192::221;
 allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
 allow 2620:18c:0:192::227;
@@ -1100,7 +1141,6 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
-allow 2a01:4f9:4b:48a9::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:c5cd::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1217,6 +1257,7 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
+allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
@@ -1476,6 +1517,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.207.163.199;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1564,7 +1606,6 @@ allow 46.38.255.27;
 allow 47.243.99.161;
 allow 47.250.38.29;
 allow 47.76.187.86;
-allow 50.17.16.156;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
@@ -1619,7 +1660,6 @@ allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
-allow 5.42.87.198;
 allow 54.36.101.21;
 allow 54.36.209.253;
 allow 54.36.209.254;
