--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -144,6 +144,7 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
@@ -151,6 +152,7 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -256,13 +258,31 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
+allow 2620:18c:0:192::131;
+allow 2620:18c:0:192::132;
+allow 2620:18c:0:192::133;
+allow 2620:18c:0:192::134;
+allow 2620:18c:0:192::135;
+allow 2620:18c:0:192::136;
+allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
+allow 2620:18c:0:192::139;
+allow 2620:18c:0:192::140;
+allow 2620:18c:0:192::141;
+allow 2620:18c:0:192::142;
+allow 2620:18c:0:192::143;
+allow 2620:18c:0:192::144;
+allow 2620:18c:0:192::145;
+allow 2620:18c:0:192::146;
 allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
+allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::150;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::216;
+allow 2620:18c:0:192::218;
+allow 2620:18c:0:192::221;
 allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
 allow 2620:18c:0:192::227;
@@ -284,7 +304,6 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
-allow 2a01:4f9:4b:48a9::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:c5cd::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -401,6 +420,7 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
+allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
