--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -169,6 +169,7 @@ set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -205,6 +206,7 @@ set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.249.57.253;
+set_real_ip_from 176.114.248.225;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
@@ -675,6 +677,7 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
+set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.50.215;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -862,13 +865,31 @@ set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 217.197.107.138;
 set_real_ip_from 217.79.189.239;
+set_real_ip_from 23.129.64.131;
+set_real_ip_from 23.129.64.132;
+set_real_ip_from 23.129.64.133;
+set_real_ip_from 23.129.64.134;
+set_real_ip_from 23.129.64.135;
+set_real_ip_from 23.129.64.136;
+set_real_ip_from 23.129.64.137;
 set_real_ip_from 23.129.64.138;
+set_real_ip_from 23.129.64.139;
+set_real_ip_from 23.129.64.140;
+set_real_ip_from 23.129.64.141;
+set_real_ip_from 23.129.64.142;
+set_real_ip_from 23.129.64.143;
+set_real_ip_from 23.129.64.144;
+set_real_ip_from 23.129.64.145;
+set_real_ip_from 23.129.64.146;
 set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
+set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.150;
 set_real_ip_from 23.129.64.212;
 set_real_ip_from 23.129.64.214;
 set_real_ip_from 23.129.64.216;
+set_real_ip_from 23.129.64.218;
+set_real_ip_from 23.129.64.221;
 set_real_ip_from 23.129.64.222;
 set_real_ip_from 23.129.64.223;
 set_real_ip_from 23.129.64.227;
@@ -959,6 +980,7 @@ set_real_ip_from 2602:fc24:19:eb06::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
@@ -966,6 +988,7 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
+set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1071,13 +1094,31 @@ set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
+set_real_ip_from 2620:18c:0:192::131;
+set_real_ip_from 2620:18c:0:192::132;
+set_real_ip_from 2620:18c:0:192::133;
+set_real_ip_from 2620:18c:0:192::134;
+set_real_ip_from 2620:18c:0:192::135;
+set_real_ip_from 2620:18c:0:192::136;
+set_real_ip_from 2620:18c:0:192::137;
 set_real_ip_from 2620:18c:0:192::138;
+set_real_ip_from 2620:18c:0:192::139;
+set_real_ip_from 2620:18c:0:192::140;
+set_real_ip_from 2620:18c:0:192::141;
+set_real_ip_from 2620:18c:0:192::142;
+set_real_ip_from 2620:18c:0:192::143;
+set_real_ip_from 2620:18c:0:192::144;
+set_real_ip_from 2620:18c:0:192::145;
+set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
+set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::150;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::214;
 set_real_ip_from 2620:18c:0:192::216;
+set_real_ip_from 2620:18c:0:192::218;
+set_real_ip_from 2620:18c:0:192::221;
 set_real_ip_from 2620:18c:0:192::222;
 set_real_ip_from 2620:18c:0:192::223;
 set_real_ip_from 2620:18c:0:192::227;
@@ -1100,7 +1141,6 @@ set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
-set_real_ip_from 2a01:4f9:4b:48a9::2;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:c5cd::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
@@ -1217,6 +1257,7 @@ set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
+set_real_ip_from 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
@@ -1476,6 +1517,7 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.207.163.199;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1564,7 +1606,6 @@ set_real_ip_from 46.38.255.27;
 set_real_ip_from 47.243.99.161;
 set_real_ip_from 47.250.38.29;
 set_real_ip_from 47.76.187.86;
-set_real_ip_from 50.17.16.156;
 set_real_ip_from 5.104.86.6;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.195.166.174;
@@ -1619,7 +1660,6 @@ set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
 set_real_ip_from 5.42.80.235;
-set_real_ip_from 5.42.87.198;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.209.253;
 set_real_ip_from 54.36.209.254;
