Update lists at 20240904-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -10,6 +10,7 @@ allow 103.186.0.144;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
+allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
 allow 104.167.242.116;
@@ -68,6 +69,7 @@ allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.232;
 allow 107.189.31.33;
+allow 107.189.3.249;
 allow 107.189.4.12;
 allow 107.189.4.158;
 allow 107.189.4.209;
@@ -91,12 +93,14 @@ allow 107.189.8.226;
 allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
+allow 107.189.8.65;
 allow 107.189.8.70;
 allow 108.181.124.143;
 allow 108.181.16.251;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.158.147;
+allow 108.61.189.136;
 allow 109.169.33.163;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -120,6 +124,7 @@ allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
+allow 130.193.15.186;
 allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
@@ -129,6 +134,7 @@ allow 139.47.104.213;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.146.142;
+allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -150,14 +156,17 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
 allow 15.204.238.148;
+allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
 allow 154.213.185.183;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
 allow 156.67.111.146;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -173,6 +182,7 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
+allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -186,6 +196,7 @@ allow 172.104.164.133;
 allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.105.161.162;
+allow 172.232.164.52;
 allow 172.235.29.198;
 allow 172.81.131.110;
 allow 172.81.131.111;
@@ -199,7 +210,7 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
-allow 176.58.121.177;
+allow 176.97.114.202;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -213,6 +224,7 @@ allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
+allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.43.128.16;
@@ -224,6 +236,7 @@ allow 179.43.159.198;
 allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
+allow 179.43.159.78;
 allow 179.43.167.195;
 allow 179.43.182.232;
 allow 179.43.182.58;
@@ -253,6 +266,7 @@ allow 185.107.70.56;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
+allow 185.125.217.74;
 allow 185.126.117.21;
 allow 185.129.61.1;
 allow 185.129.61.10;
@@ -312,6 +326,7 @@ allow 185.220.100.245;
 allow 185.220.100.246;
 allow 185.220.100.247;
 allow 185.220.100.248;
+allow 185.220.100.249;
 allow 185.220.100.250;
 allow 185.220.100.251;
 allow 185.220.100.252;
@@ -340,6 +355,7 @@ allow 185.220.101.130;
 allow 185.220.101.134;
 allow 185.220.101.136;
 allow 185.220.101.137;
+allow 185.220.101.138;
 allow 185.220.101.139;
 allow 185.220.101.14;
 allow 185.220.101.141;
@@ -347,6 +363,7 @@ allow 185.220.101.142;
 allow 185.220.101.143;
 allow 185.220.101.144;
 allow 185.220.101.145;
+allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.149;
 allow 185.220.101.15;
@@ -364,18 +381,25 @@ allow 185.220.101.162;
 allow 185.220.101.163;
 allow 185.220.101.164;
 allow 185.220.101.166;
+allow 185.220.101.167;
 allow 185.220.101.168;
+allow 185.220.101.169;
 allow 185.220.101.17;
 allow 185.220.101.170;
+allow 185.220.101.171;
+allow 185.220.101.174;
 allow 185.220.101.175;
 allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
 allow 185.220.101.18;
+allow 185.220.101.180;
 allow 185.220.101.181;
 allow 185.220.101.182;
+allow 185.220.101.183;
 allow 185.220.101.185;
+allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
@@ -411,6 +435,7 @@ allow 185.220.101.42;
 allow 185.220.101.43;
 allow 185.220.101.44;
 allow 185.220.101.45;
+allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
@@ -421,6 +446,7 @@ allow 185.220.101.52;
 allow 185.220.101.53;
 allow 185.220.101.54;
 allow 185.220.101.55;
+allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
 allow 185.220.101.59;
@@ -448,6 +474,7 @@ allow 185.220.101.78;
 allow 185.220.101.79;
 allow 185.220.101.8;
 allow 185.220.101.80;
+allow 185.220.101.81;
 allow 185.220.101.82;
 allow 185.220.101.83;
 allow 185.220.101.84;
@@ -505,6 +532,7 @@ allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
+allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.132;
@@ -545,6 +573,7 @@ allow 192.42.116.176;
 allow 192.42.116.177;
 allow 192.42.116.178;
 allow 192.42.116.179;
+allow 192.42.116.18;
 allow 192.42.116.180;
 allow 192.42.116.181;
 allow 192.42.116.182;
@@ -595,6 +624,7 @@ allow 193.142.147.233;
 allow 193.142.147.69;
 allow 193.182.96.246;
 allow 193.189.100.194;
+allow 193.189.100.195;
 allow 193.189.100.196;
 allow 193.189.100.197;
 allow 193.189.100.198;
@@ -613,10 +643,13 @@ allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
+allow 193.233.133.109;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.38.17;
+allow 193.70.80.213;
 allow 194.15.112.133;
+allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.164.122.21;
@@ -643,6 +676,7 @@ allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.51.52;
 allow 198.98.52.24;
 allow 198.98.53.136;
@@ -670,6 +704,7 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
+allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
@@ -679,6 +714,7 @@ allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
 allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
+allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
@@ -747,6 +783,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5513;
 allow 2001:67c:6ec:203:218:33ff:fe44:5514;
 allow 2001:67c:6ec:203:218:33ff:fe44:5515;
 allow 2001:67c:6ec:203:218:33ff:fe44:5517;
+allow 2001:67c:6ec:203:218:33ff:fe44:5518;
 allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5522;
@@ -787,6 +824,7 @@ allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.8.156.142;
+allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
 allow 205.185.113.180;
@@ -825,6 +863,7 @@ allow 217.197.107.138;
 allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
+allow 23.129.64.133;
 allow 23.129.64.134;
 allow 23.129.64.135;
 allow 23.129.64.136;
@@ -833,9 +872,11 @@ allow 23.129.64.138;
 allow 23.129.64.139;
 allow 23.129.64.140;
 allow 23.129.64.141;
+allow 23.129.64.142;
 allow 23.129.64.143;
 allow 23.129.64.144;
 allow 23.129.64.145;
+allow 23.129.64.146;
 allow 23.129.64.147;
 allow 23.129.64.148;
 allow 23.129.64.149;
@@ -845,6 +886,7 @@ allow 23.129.64.172;
 allow 23.129.64.173;
 allow 23.129.64.211;
 allow 23.129.64.212;
+allow 23.129.64.213;
 allow 23.129.64.214;
 allow 23.129.64.215;
 allow 23.129.64.216;
@@ -862,7 +904,9 @@ allow 23.129.64.227;
 allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.129.64.230;
+allow 23.130.136.194;
 allow 23.130.136.195;
+allow 23.137.248.100;
 allow 23.137.248.139;
 allow 23.137.250.83;
 allow 23.137.253.108;
@@ -888,6 +932,7 @@ allow 23.154.177.21;
 allow 23.154.177.22;
 allow 23.154.177.23;
 allow 23.154.177.24;
+allow 23.154.177.25;
 allow 23.154.177.26;
 allow 23.154.177.27;
 allow 23.154.177.28;
@@ -921,6 +966,7 @@ allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.35;
 allow 2.58.56.43;
+allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
@@ -928,11 +974,13 @@ allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
+allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:77c0::1;
+allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
@@ -954,6 +1002,7 @@ allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:3f9:116c:94a1:a862:dfec;
 allow 2605:6400:10:3f9:2fb4:3d9c:a1bc:73a3;
 allow 2605:6400:10:3f9:42af:65de:583f:49f1;
@@ -1009,6 +1058,7 @@ allow 2605:6400:30:f307:ba73:e934:5195:accd;
 allow 2605:6400:30:f307:c2bf:d371:75a9:31e6;
 allow 2605:6400:30:f307:ff42:3928:c777:8563;
 allow 2605:6400:30:f32b:7417:ea33:425b:9732;
+allow 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 allow 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
 allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
@@ -1023,6 +1073,7 @@ allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
+allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
@@ -1054,6 +1105,7 @@ allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::131;
 allow 2620:18c:0:192::132;
+allow 2620:18c:0:192::133;
 allow 2620:18c:0:192::134;
 allow 2620:18c:0:192::135;
 allow 2620:18c:0:192::136;
@@ -1062,9 +1114,11 @@ allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
 allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
+allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
 allow 2620:18c:0:192::144;
 allow 2620:18c:0:192::145;
+allow 2620:18c:0:192::146;
 allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
@@ -1074,6 +1128,7 @@ allow 2620:18c:0:192::172;
 allow 2620:18c:0:192::173;
 allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
+allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::215;
 allow 2620:18c:0:192::216;
@@ -1111,9 +1166,9 @@ allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:c5cd::1;
 allow 2a01:5e0:36:cf2a::1;
+allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1179,6 +1234,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
+allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
@@ -1200,6 +1256,7 @@ allow 2a05:541:152:4::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1241,6 +1298,7 @@ allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
 allow 2a0b:f4c0:16c:5::1;
 allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
@@ -1251,12 +1309,14 @@ allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::137;
+allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
+allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
 allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::150;
@@ -1272,16 +1332,23 @@ allow 2a0b:f4c2:1::162;
 allow 2a0b:f4c2:1::163;
 allow 2a0b:f4c2:1::164;
 allow 2a0b:f4c2:1::166;
+allow 2a0b:f4c2:1::167;
 allow 2a0b:f4c2:1::168;
+allow 2a0b:f4c2:1::169;
 allow 2a0b:f4c2:1::170;
+allow 2a0b:f4c2:1::171;
+allow 2a0b:f4c2:1::174;
 allow 2a0b:f4c2:1::175;
 allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
+allow 2a0b:f4c2:1::180;
 allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
+allow 2a0b:f4c2:1::183;
 allow 2a0b:f4c2:1::185;
+allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
@@ -1315,6 +1382,7 @@ allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
+allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
@@ -1325,6 +1393,7 @@ allow 2a0b:f4c2:2::52;
 allow 2a0b:f4c2:2::53;
 allow 2a0b:f4c2:2::54;
 allow 2a0b:f4c2:2::55;
+allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
@@ -1356,6 +1425,7 @@ allow 2a0b:f4c2:3::77;
 allow 2a0b:f4c2:3::78;
 allow 2a0b:f4c2:3::79;
 allow 2a0b:f4c2:3::80;
+allow 2a0b:f4c2:3::81;
 allow 2a0b:f4c2:3::82;
 allow 2a0b:f4c2:3::83;
 allow 2a0b:f4c2:3::84;
@@ -1404,10 +1474,13 @@ allow 2a0e:97c0:3ea:fd::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
+allow 2a0f:5707:aaef:282::1;
 allow 2a0f:5707:aaef:390::1;
+allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
+allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
 allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
@@ -1428,6 +1501,7 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
@@ -1445,6 +1519,7 @@ allow 31.129.22.65;
 allow 31.133.0.16;
 allow 31.133.0.17;
 allow 31.133.0.210;
+allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
@@ -1484,6 +1559,7 @@ allow 45.138.16.249;
 allow 45.138.16.42;
 allow 45.138.16.76;
 allow 45.139.122.176;
+allow 45.139.122.177;
 allow 45.139.122.178;
 allow 45.139.122.179;
 allow 45.141.215.110;
@@ -1510,6 +1586,7 @@ allow 45.148.10.169;
 allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.155.76.108;
+allow 45.155.76.226;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1524,12 +1601,15 @@ allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
+allow 45.80.208.213;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
 allow 45.94.31.180;
 allow 45.94.31.68;
+allow 45.95.169.130;
 allow 45.95.169.223;
+allow 45.95.169.224;
 allow 45.95.169.225;
 allow 45.95.169.226;
 allow 45.95.169.227;
@@ -1548,6 +1628,7 @@ allow 47.250.38.29;
 allow 47.76.187.86;
 allow 5.104.86.6;
 allow 51.15.59.15;
+allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.222.84.46;
@@ -1557,13 +1638,18 @@ allow 51.38.81.135;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
+allow 51.81.254.3;
 allow 51.81.33.188;
+allow 5.181.80.107;
 allow 5.182.86.212;
+allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1608,6 +1694,7 @@ allow 64.227.115.78;
 allow 64.227.159.148;
 allow 66.146.193.33;
 allow 66.220.242.222;
+allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
@@ -1616,6 +1703,7 @@ allow 72.211.49.235;
 allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
+allow 77.221.152.105;
 allow 77.221.157.237;
 allow 77.221.159.184;
 allow 77.221.159.189;
@@ -1684,11 +1772,14 @@ allow 89.185.82.71;
 allow 89.185.85.140;
 allow 89.213.174.248;
 allow 89.234.157.254;
+allow 89.236.112.100;
+allow 89.37.95.34;
 allow 89.58.18.210;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 89.58.41.251;
 allow 89.58.63.200;
+allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.202.5.104;
 allow 91.203.145.116;
@@ -1697,6 +1788,7 @@ allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
 allow 91.208.75.239;
+allow 91.208.75.4;
 allow 91.210.107.207;
 allow 91.210.59.57;
 allow 91.219.236.101;
