--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -6,6 +6,7 @@ deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
 deny 2001:1b60:3:239:1003:106:0:1;
+deny 2001:40e8:0:f090::100;
 deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:2:9161::1;
 deny 2001:41d0:304:200::3348;
@@ -15,6 +16,7 @@ deny 2001:41d0:404:300::dd2;
 deny 2001:41d0:601:1100::108e;
 deny 2001:41d0:701:1100::38fc;
 deny 2001:41d0:701:1100::4f60;
+deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
@@ -83,6 +85,7 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5513;
 deny 2001:67c:6ec:203:218:33ff:fe44:5514;
 deny 2001:67c:6ec:203:218:33ff:fe44:5515;
 deny 2001:67c:6ec:203:218:33ff:fe44:5517;
+deny 2001:67c:6ec:203:218:33ff:fe44:5518;
 deny 2001:67c:6ec:203:218:33ff:fe44:5519;
 deny 2001:67c:6ec:203:218:33ff:fe44:5520;
 deny 2001:67c:6ec:203:218:33ff:fe44:5522;
@@ -128,11 +131,13 @@ deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
+deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:77c0::1;
+deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
@@ -154,6 +159,7 @@ deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:12b:1877:e308:72b3:41b0;
 deny 2605:6400:10:1362::2;
 deny 2605:6400:10:16e:e9da:a184:bfe1:e727;
+deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:3f9:116c:94a1:a862:dfec;
 deny 2605:6400:10:3f9:2fb4:3d9c:a1bc:73a3;
 deny 2605:6400:10:3f9:42af:65de:583f:49f1;
@@ -209,6 +215,7 @@ deny 2605:6400:30:f307:ba73:e934:5195:accd;
 deny 2605:6400:30:f307:c2bf:d371:75a9:31e6;
 deny 2605:6400:30:f307:ff42:3928:c777:8563;
 deny 2605:6400:30:f32b:7417:ea33:425b:9732;
+deny 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 deny 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
 deny 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 deny 2605:6400:30:f38b:28b3:cd24:51f3:e412;
@@ -223,6 +230,7 @@ deny 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 deny 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 deny 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
+deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f78b::2;
@@ -254,6 +262,7 @@ deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::131;
 deny 2620:18c:0:192::132;
+deny 2620:18c:0:192::133;
 deny 2620:18c:0:192::134;
 deny 2620:18c:0:192::135;
 deny 2620:18c:0:192::136;
@@ -262,9 +271,11 @@ deny 2620:18c:0:192::138;
 deny 2620:18c:0:192::139;
 deny 2620:18c:0:192::140;
 deny 2620:18c:0:192::141;
+deny 2620:18c:0:192::142;
 deny 2620:18c:0:192::143;
 deny 2620:18c:0:192::144;
 deny 2620:18c:0:192::145;
+deny 2620:18c:0:192::146;
 deny 2620:18c:0:192::147;
 deny 2620:18c:0:192::148;
 deny 2620:18c:0:192::149;
@@ -274,6 +285,7 @@ deny 2620:18c:0:192::172;
 deny 2620:18c:0:192::173;
 deny 2620:18c:0:192::211;
 deny 2620:18c:0:192::212;
+deny 2620:18c:0:192::213;
 deny 2620:18c:0:192::214;
 deny 2620:18c:0:192::215;
 deny 2620:18c:0:192::216;
@@ -310,9 +322,9 @@ deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:c5cd::1;
 deny 2a01:5e0:36:cf2a::1;
+deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
-deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -378,6 +390,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
+deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:106:394::1;
@@ -399,6 +412,7 @@ deny 2a05:541:152:4::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
@@ -440,6 +454,7 @@ deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
 deny 2a0b:f4c0:16c:5::1;
 deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
@@ -450,12 +465,14 @@ deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::134;
 deny 2a0b:f4c2:1::137;
+deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
 deny 2a0b:f4c2:1::141;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::144;
 deny 2a0b:f4c2:1::145;
+deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::149;
 deny 2a0b:f4c2:1::150;
@@ -471,16 +488,23 @@ deny 2a0b:f4c2:1::162;
 deny 2a0b:f4c2:1::163;
 deny 2a0b:f4c2:1::164;
 deny 2a0b:f4c2:1::166;
+deny 2a0b:f4c2:1::167;
 deny 2a0b:f4c2:1::168;
+deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
+deny 2a0b:f4c2:1::171;
+deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
 deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
+deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
+deny 2a0b:f4c2:1::183;
 deny 2a0b:f4c2:1::185;
+deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
 deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
@@ -514,6 +538,7 @@ deny 2a0b:f4c2:2::42;
 deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
+deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
@@ -524,6 +549,7 @@ deny 2a0b:f4c2:2::52;
 deny 2a0b:f4c2:2::53;
 deny 2a0b:f4c2:2::54;
 deny 2a0b:f4c2:2::55;
+deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
@@ -555,6 +581,7 @@ deny 2a0b:f4c2:3::77;
 deny 2a0b:f4c2:3::78;
 deny 2a0b:f4c2:3::79;
 deny 2a0b:f4c2:3::80;
+deny 2a0b:f4c2:3::81;
 deny 2a0b:f4c2:3::82;
 deny 2a0b:f4c2:3::83;
 deny 2a0b:f4c2:3::84;
@@ -603,10 +630,13 @@ deny 2a0e:97c0:3ea:fd::1;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
+deny 2a0f:5707:aaef:282::1;
 deny 2a0f:5707:aaef:390::1;
+deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
+deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
 deny 2a0f:df00:0:255::197;
 deny 2a0f:df00:0:255::198;
@@ -627,6 +657,7 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
