Update lists at 20240908-1200

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -112,6 +112,7 @@ allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:ac8:8b:22:0:1:9121:1111;
 allow 2001:b011:4002:37fc::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -333,7 +334,6 @@ allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
