Update lists at 20240909-1800

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -868,6 +868,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.128.157.46;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
