Update lists at 20240912-1500

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -417,7 +417,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:193::100;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
-allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:11:7::2;
@@ -646,6 +645,7 @@ allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
+allow 2a12:5940:a896::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
