--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -417,7 +417,6 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:193::100;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
-deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:11:7::2;
@@ -646,6 +645,7 @@ deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
+deny 2a12:5940:a896::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c826::2;
