Update lists at 20240913-0600

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -168,7 +168,6 @@ deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
-deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -224,6 +223,7 @@ deny 178.20.55.182;
 deny 178.218.144.18;
 deny 178.218.144.51;
 deny 178.218.144.64;
+deny 178.218.144.96;
 deny 178.218.144.99;
 deny 179.43.128.16;
 deny 179.43.159.194;
@@ -977,7 +977,6 @@ deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
@@ -1445,6 +1444,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:95;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:3ea:fd::1;
+deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:5707:aaef:282::1;
@@ -1512,6 +1512,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.128.157.46;
 deny 45.129.84.246;
+deny 45.129.84.248;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
