--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -168,7 +168,6 @@ allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -224,6 +223,7 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
+allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -977,7 +977,6 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
@@ -1445,6 +1444,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:95;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:3ea:fd::1;
+allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:5707:aaef:282::1;
@@ -1512,6 +1512,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.128.157.46;
 allow 45.129.84.246;
+allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
