--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -146,7 +146,6 @@ deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
@@ -613,6 +612,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:95;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:3ea:fd::1;
+deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:5707:aaef:282::1;
