--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -168,7 +168,6 @@ set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
-set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -224,6 +223,7 @@ set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
+set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
@@ -977,7 +977,6 @@ set_real_ip_from 2602:fc24:19:eb06::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
-set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
@@ -1445,6 +1444,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
 set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:97c0:3ea:fd::1;
+set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:5707:aaef:282::1;
@@ -1512,6 +1512,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.128.157.46;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
