Update lists at 20240913-1800

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -119,7 +119,6 @@ set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
-set_real_ip_from 130.0.236.83;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
@@ -1264,6 +1263,7 @@ set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+set_real_ip_from 2a0a:3840:8078:25:0:504e:1961:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1695,6 +1695,8 @@ set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
+set_real_ip_from 80.78.25.97;
+set_real_ip_from 80.78.26.122;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
