--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -119,7 +119,6 @@ deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
-deny 130.0.236.83;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
@@ -1264,6 +1263,7 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+deny 2a0a:3840:8078:25:0:504e:1961:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1695,6 +1695,8 @@ deny 80.210.78.252;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
+deny 80.78.25.97;
+deny 80.78.26.122;
 deny 80.82.78.14;
 deny 80.94.92.106;
 deny 81.16.33.42;
