--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -429,6 +429,7 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+deny 2a0a:3840:8078:25:0:504e:1961:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
